# BGVR

chapter_02/experiment_2_4_1/: Cargo.toml  README.md  output.txt
chapter_02/experiment_2_4_1/src/: haplotype1.fasta  haplotype2.fasta  haplotype3.fasta  main.rs
chapter_02/experiment_2_5_1/: Cargo.toml  README.md  generate_gene_expression.py  output.txt
chapter_02/experiment_2_5_1/src/: main.rs
chapter_03/experiment_3_1_4/: Cargo.toml  README.md  output.txt
chapter_03/experiment_3_1_5/: Cargo.toml  README.md  output.txt
chapter_03/experiment_3_1_5/src/: main.rs
chapter_03/experiment_3_1_6/: Cargo.toml  README.md  example.fasta  output.json
chapter_03/experiment_3_1_6/src/: main.rs
chapter_03/experiment_3_1_7/: README.md  example.fastq  main.nf
chapter_03/experiment_3_1_7/debruijn_bloom/: Cargo.toml
chapter_03/experiment_3_1_7/debruijn_bloom/src/: main.rs
chapter_03/experiment_3_1_7/results/: graph.json
chapter_04/experiment_4_2_1/: README.md  pipeline.nf
chapter_04/experiment_4_2_1/parallel_correlation/: Cargo.toml
chapter_04/experiment_4_2_1/parallel_correlation/src/: main.rs
chapter_04/experiment_4_4_1/: README.md
chapter_04/experiment_4_4_1/peak_calling/: Cargo.toml
chapter_04/experiment_4_4_1/src/: main.rs
chapter_04/experiment_4_5_1/: Cargo.toml  README.md
chapter_04/experiment_4_5_1/src/: main.rs
chapter_05/experiment_5_5_1/: README.md
chapter_05/experiment_5_5_1_update/: Cargo.toml  Dockerfile  README.md  hpc_job.slurm  hypotheses.json  merged_variants.json  pileup.json  run_pipeline.sh
chapter_05/experiment_5_5_1_update/partial_variants/: partial_variants_chunk_0.json  partial_variants_chunk_1.json
chapter_05/experiment_5_5_1_update/src/: main.rs
chapter_05/experiment_5_6_1/: Cargo.toml  README.md  alignments.json  merged_breakpoints.json
chapter_05/experiment_5_6_1/partial_breakpoints/: partial_breakpoints_0.json
chapter_05/experiment_5_6_1/src/: main.rs
chapter_06/experiment_6_3_1/: Cargo.toml  README.md  filtered.bcf  main.nf  sample.vcf  wgs_cohort.bcf  wgs_cohort.bcf.csi
chapter_06/experiment_6_3_1/src/: main.rs
chapter_06/experiment_6_4_1/: Cargo.toml  README.md  nextflow.config  samples.txt
chapter_06/experiment_6_4_1/results/: merged.vcf
chapter_12/experiment_12_1_1/: Cargo.toml  README.md  generate_csv_data.py  main.nf  quick_csv_generator.sh  setup_script.sh
chapter_12/experiment_12_1_1/src/: data_generator.rs  main_analysis.rs
chapter_12/experiment_12_2_1/: Cargo.toml  README.md  main.nf  sample_data_generator.py  setup_script.sh  test_pipeline.sh
chapter_12/experiment_12_2_1/src/: main.rs
chapter_12/experiment_12_3_1/: Cargo.toml  README.md  genomic_data_generator.py  genomic_setup_script.sh  main.nf
chapter_12/experiment_12_3_1/src/: main.rs
