[package]
name = "population_genomics_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Data handling
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Linear algebra and numerical computing
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
ndarray-stats = "0.5"

# Random number generation for synthetic data
rand = "0.8"
rand_distr = "0.4"

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# File I/O utilities
walkdir = "2.0"

# Statistical functions
statrs = "0.16"

# Parallel processing
rayon = "1.7"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "generate_data"
path = "src/bin/generate_data.rs"

[[bin]]
name = "population_analysis"
path = "src/bin/population_analysis.rs"
