[package]
name = "genomic_sparse_index"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_sparse_index"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ndarray = "0.15"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rayon = "1.8"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "fenwick_bench"
harness = false
