[package]
name = "genomic_algorithms"
version = "0.2.0"
edition = "2021"
authors = ["Genomic Research Team"]
description = "High-performance genomic algorithms for allele frequency, LD analysis, and HMM phasing"
license = "MIT"
repository = "https://github.com/your-org/genomic-algorithms"

[[bin]]
name = "rust_core_algorithms"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
ndarray = { version = "0.15", features = ["blas"] }
rand = { version = "0.8", features = ["std_rng"] }
rand_distr = "0.4"

# I/O and data handling
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command line and logging
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# Progress and performance
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }

# Math and statistics
statrs = "0.16"
approx = "0.5"

# Optional BLAS acceleration (uncomment if available)
# openblas-src = { version = "0.10", features = ["cblas", "system"] }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[features]
default = ["parallel"]
parallel = ["rayon"]
blas = ["ndarray/blas"]

[[bench]]
name = "genomic_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
